--- a/app/index.html
+++ b/app/index.html
@@ -171,22 +171,22 @@
                    <div class="col-lg-12">
                        <div class="photo_g">
                            <div>
-                               <img src="img/photo.png" alt="">
-                               <img src="img/photo.png" alt="">
-                               <img src="img/photo.png" alt="">
-                               <img src="img/photo.png" alt="">
+                               <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
+                                <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
+                                <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
+                                <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
                            </div>
                            <div>
-                               <img src="img/photo.png" alt="">
-                               <img src="img/photo.png" alt="">
-                               <img src="img/photo.png" alt="">
-                               <img src="img/photo.png" alt="">
+                                <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
+                                <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
+                                <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
+                                <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
                            </div>
                            <div>
-                               <img src="img/photo.png" alt="">
-                               <img src="img/photo.png" alt="">
-                               <img src="img/photo.png" alt="">
-                               <img src="img/photo.png" alt="">
+                               <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
+                                <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
+                                <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
+                                <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
                            </div>
                        </div>
                    </div>
