--- a/app/index.html
+++ b/app/index.html
@@ -52,14 +52,14 @@
                             <img src="img/logo.png" alt="">
                         </div>
                         <div class="col-lg-6 phone pull-right">
-                           <img src="img/%D1%87%D0%B0%D1%81%D1%8B%2024_7.png" alt="#">
+                           <img src="img/phone.png" alt="#">
                             <p><span>+7 965-403-44-76</span><br>
                             круглосуточно</p>
                         </div>
                   
     <div class="top_menu">
                     <div class="img_top_menu">
-                        <img src="img/%D0%9F%D1%80%D1%8F%D0%BC%D0%BE%D1%83%D0%B3%D0%BE%D0%BB%D1%8C%D0%BD%D0%B8%D0%BA%203.png" alt="">
+                        <img src="img/img_top_menu.png" alt="">
                     </div>
                     <div class="menu">
         <ul>
@@ -92,27 +92,27 @@
                    <div class="col-lg-12">
                        <div class="buy">
                           <div>
-                           <img src="img/%D0%BB%D0%B5%D0%B3%D0%BA%D0%BE%D0%B2%D1%83%D1%88%D0%BA%D0%B0.png" alt="">
+                           <img src="img/legko.png" alt="">
                            <p>Эвакуация легковых <br> автомобилей</p>
                            <button><b>от 1200 руб</b></button>
                            </div>
                            <div>
-                           <img src="img/%D0%B4%D0%B6%D0%B8%D0%BF.png" alt="">
+                           <img src="img/jeep.png" alt="">
                            <p>Эвакуация джипов, <br>внедорожников до 4 тонн</p>
                            <button><b>от 2000 руб</b></button>
                            </div>
                            <div>
-                           <img src="img/%D0%BC%D0%BE%D1%82%D0%BE.png" alt="">
+                           <img src="img/moto.png" alt="">
                            <p>Эвакуация мотоциклов, <br>квадроциклов</p>
                            <button><b>от 2000 руб</b></button>
                            </div>
                            <div>
-                           <img src="img/%D0%BF%D0%BE%D0%B3%D1%80%D1%83%D0%B7%D1%87%D0%B8%D0%BA.png" alt="">
+                           <img src="img/pogr.png" alt="">
                            <p>Эвакуация спецтехники <br>до 4 тонн</p>
                            <button><b>от 2000 руб</b></button>
                            </div>
                            <div>
-                           <img src="img/%D0%BC%D0%B8%D0%BA%D1%80%D0%BE%D0%B1%D1%83%D1%81.png" alt="">
+                           <img src="img/bus.png" alt="">
                            <p>Эвакуация галезей, <br>микроавтобусов</p>
                            <button><b>от 2000 руб</b></button>
                            </div>
