--- a/app/index.html
+++ b/app/index.html
@@ -44,15 +44,12 @@
 	<!-- Здесь пишем код -->
 <div class="inner">
     <div class="header">    
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
                        <div class="head">
-                        <div class="col-lg-6 logo pull-left">
+                        <div class="logo">
                             <img src="img/logo.png" alt="">
                         </div>
-                        <div class="col-lg-6 phone pull-right">
-                           <img src="img/phone.png" alt="#">
+                        <div class="phone">
+                           <img src="img/phone.png"  alt="#">
                             <p><span>+7 965-403-44-76</span><br>
                             круглосуточно</p>
                         </div>
@@ -80,16 +77,10 @@
              <h1>БЫСТРО И НЕ ДОРОГО<br>24 ЧАСА В СУТКИ<br>от 1500 рублей</h1>
          </div>
           </div>
-          </div>
-        </div>
-    </div>
 </div>  
 </div>
 <div class="inner">
    <div class="middle_buy">
-           <div class="container">
-               <div class="row">
-                   <div class="col-lg-12">
                        <div class="buy">
                           <div>
                            <img src="img/legko.png" alt="">
@@ -117,16 +108,10 @@
                            <button><b>от 2000 руб</b></button>
                            </div>
                        </div>
-                   </div>
-               </div>
-           </div>
        </div>
    </div>
 <div class="inner">
    <div class="region">
-           <div class="container">
-               <div class="row">
-                   <div class="col-lg-12">
                        <div class="region_t">
                            <h1>Районы, где мы работаем</h1>
                        </div>
@@ -159,16 +144,10 @@
                            <a href="">Фото</a><a href="">Видео</a>
                            </div>
                        </div>
-                   </div>
-               </div>
-           </div>
        </div>
    </div>
 <div class="inner">
    <div class="galerey__photo">
-           <div class="container">
-               <div class="row">
-                   <div class="col-lg-12">
                        <div class="photo_g">
                            <div>
                                <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
@@ -189,54 +168,38 @@
                                 <a href="img/photo.png" class="gallery-item"><img src="img/photo.png" alt=""></a>
                            </div>
                        </div>
-                   </div>
-               </div>
-           </div>
        </div>
    </div>
 <div class="inner">    
     <div class="footer">    
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
                     <div class="footer__nav">
-                        <div class="col-lg-4">
+                        <div>
                             <h1>Правовая информация</h1>
                             <p>Представленая на сайтестоимость услуг<br>носит исключительно информационный<br>характер и не при каких условиях не являеться<br>публичной офертой.</p>
                         </div>
-                        <div class="col-lg-2">
+                        <div>
                             <h1>Услуги</h1>
                             <a href="">Эвакуатор</a>
                             <a href="">Помощь</a>
                             <a href="">Другие услуги</a>
                         </div>
-                        <div class="col-lg-2">
+                        <div>
                             <h1>Автоклуб</h1>
                             <a href="">Портнеры</a>
                             <a href="">Правила клуба</a>
                             <a href="">Правила партнеров</a>
                         </div>
-                        <div class="col-lg-4">
+                        <div>
                             <h1>Контактные данные</h1>
                         </div>
                     </div>
-                    
-                </div>
-            </div>
-        </div>
     </div>
 </div>
 <div class="inner">
     <div class="foo">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
                 <div class="part">
                            Design by Alex Kalinin | WEB-Designer. All rights reserver 2016
                        </div>
-            </div>
-        </div>
-    </div>
 </div>
 </div>
 </div>
